fp-library/tests/ui/new_send_not_sync.stderr
error[E0277]: `RefCell<i32>` cannot be shared between threads safely
  --> tests/ui/new_send_not_sync.rs:8:68
   |
 8 |       let _ = <ArcFnBrand as SendCloneableFn>::send_cloneable_fn_new(move |_: ()| {
   |               ------------------------------------------------------ ^-----------
   |               |                                                      |
   |  _____________|______________________________________________________within this `{closure@$DIR/tests/ui/new_send_not_sync.rs:8:68: 8:80}`
   | |             |
   | |             required by a bound introduced by this call
 9 | |         println!("{:?}", cell);
10 | |     });
   | |_____^ `RefCell<i32>` cannot be shared between threads safely
   |
   = help: within `{closure@$DIR/tests/ui/new_send_not_sync.rs:8:68: 8:80}`, the trait `Sync` is not implemented for `RefCell<i32>`
   = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
note: required because it's used within this closure
  --> tests/ui/new_send_not_sync.rs:8:68
   |
 8 |     let _ = <ArcFnBrand as SendCloneableFn>::send_cloneable_fn_new(move |_: ()| {
   |                                                                    ^^^^^^^^^^^^
note: required by a bound in `fp_library::classes::send_cloneable_fn::SendCloneableFn::send_cloneable_fn_new`
  --> src/classes/send_cloneable_fn.rs
   |
   |     fn send_cloneable_fn_new<'a, A, B>(
   |        --------------------- required by a bound in this associated function
   |         f: impl 'a + Fn(A) -> B + Send + Sync
   |                                          ^^^^ required by this bound in `SendCloneableFn::send_cloneable_fn_new`
